<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Rune Reader</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="back_to_library">Back to Library</string>
    <string name="go_to_page">Go to Page</string>
    <string name="scale">Scale</string>
    <string name="scale_auto">Auto</string>
    <string name="scale_off">None</string>
    <string name="scale_height">Height</string>
    <string name="scale_width">Width</string>
    <string name="orientation">Orientation</string>
    <string name="orientation_device">Use device settings</string>
    <string name="orientation_portrait">Lock to portrait</string>
    <string name="orientation_landscape">Lock to landscape</string>
    <string name="read_left_to_right">Read Left to Right</string>
    <string name="immersive_mode">Immersive mode</string>
    <string name="fullscreen_mode">Fullscreen mode</string>
    <string name="nothing_found">Nothing found for given filters. Try changing series or reading filter.</string>
    <string name="options">Options</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="sync">Scan library</string>
    <string name="action_last">Last</string>
    <string name="image_cover">Image cover</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="series_filter_title">Filter by series</string>
    <string name="read_filter_title">Filter by read status</string>
    <string name="press_again_to_exit">Press back again to exit</string>
    <string name="sync_library_popup_title">Sync Library</string>
    <string name="sync_library_popup_message">Are you sure you want sync the library?</string>
    <string name="read_something_first">Read something first</string>
    <string name="set_library_folders_first">You can set library folders in settings</string>
    <string name="library_syncing">Library Syncing</string>
    <string name="cleaning_library">Cleaning library</string>
    <string name="analyzing_comic">Analyzing comic </string>
    <string name="deleting_comic">Deleting comic </string>
    <string name="library_syncing_failed_to_start">Sync did not start</string>
    <string name="error_closing_progress_dialog">Error closing progress dialog</string>
    <string name="other">Other</string>
    <string name="app_about">Homepage : https://github.com/rlach/opencomicreader \n\n
        Developers\n -
        Areinu\n 
        VoR \n\n
        Contributors\n
        - SpeedProd\n
        - afterlifesol\n
        - AKiniyalocts\n
        - maximeh\n
        - cedricje
    </string>
    <string name="welcome_text">Welcome to the Rune Reader \n\n
        To begin enter settings and choose comic library folder. Afterwards use refresh scan button to search for new comics.\n\n
        When you add new comics in the future be sure to re-run scan option.\n\n
        Scanning might take a while depending on your library size.</string>

    <string-array name="scaleMode">
        <item>None</item>
        <item>Height</item>
        <item>Width</item>
        <item>Auto</item>>
    </string-array>
    <string-array name="scaleMode_v">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="screenOrientation">
        <item>Use device settings</item>
        <item>Lock to portrait</item>
        <item>Lock to landscape</item>
    </string-array>
    <string-array name="screenOrientation_v">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="seriesFilter">
        <item>All</item>
        <item>Series</item>
        <item>Recent</item>
    </string-array>
    <string-array name="other">
        <item>Sync</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>
    <string-array name="readFilter">
        <item>All</item>
        <item>Unread</item>
        <item>In Progress</item>
        <item>Read</item>
    </string-array>
</resources>